--- a/src/app/app-grocery/app-grocery.component.html
+++ b/src/app/app-grocery/app-grocery.component.html
@@ -4,9 +4,9 @@
   <div class="row">
       <div class="col-xs-6 col-md-4">
           <div class="input-group">
-              <input type="text" class="form-control" placeholder="enter grocery items" id="txtSearch" />
+              <input type="text" class="form-control" placeholder="enter grocery items" id="txtSearch" [(ngModel)]="task" />
               <div class="input-group-btn">
-                  <button class="btn btn-primary" type="button">
+                  <button class="btn btn-primary" type="button" (click)="onClick()">
       <span class="glyphicon glyphicon-ok"></span>
       </button>
               </div>
@@ -14,4 +14,16 @@
       </div>
   </div>
 
+  <span>
+      {{tasks | json}}
+  </span>
+
+  <br/>
+
+  <ul class="list-group">
+      <li *ngFor="let task of tasks" class="list-group-item">
+          <span> {{ task.name }} </span>
+      </li>
+  </ul>
+  
 </div>
