--- a/src/app/app-grocery/app-grocery.component.html
+++ b/src/app/app-grocery/app-grocery.component.html
@@ -1,14 +1,14 @@
 <div>
-  <h2> Grocery list manager </h2>
+  <h2> Grocery List Manager </h2>
 
   <div class="row">
       <div class="col-xs-6 col-md-4">
           <div class="input-group">
               <input type="text" class="form-control" placeholder="enter grocery items" id="txtSearch" [(ngModel)]="task" />
               <div class="input-group-btn">
-                  <button class="btn btn-primary" type="button" (click)="onClick()">
-      <span class="glyphicon glyphicon-ok"></span>
-      </button>
+                  <button class="btn btn-primary" type="button" (click)="onClick()">enter
+                      <span class="glyphicon glyphicon-ok"></span>
+                  </button>
               </div>
           </div>
       </div>
@@ -16,10 +16,23 @@
 
   <br/>
 
-  <ul class="list-group">
-      <li *ngFor="let task of tasks" class="list-group-item">
-          <span> {{ task.name }} </span>
-      </li>
-  </ul>
-
+  <table class="table">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Remove</th>
+          <th scope="col">List Items:</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let task of tasks">
+            <td>
+                <button type="button" class="btn btn-outline-primary" (click)="deleteOnClick(task)">Delete</button>
+            </td>
+            <td>
+              <span> {{ task.name }} </span>
+             </td>
+         </tr>
+         
+      </tbody>
+   </table>
 </div>
