--- a/src/app/app-grocery/app-grocery.component.html
+++ b/src/app/app-grocery/app-grocery.component.html
@@ -19,7 +19,7 @@
   <table class="table">
       <thead class="thead-dark">
         <tr>
-          <th scope="col">Remove</th>
+          <th scope="col">Remove Items</th>
           <th scope="col">List Items:</th>
         </tr>
       </thead>
